--- a/src/implementation/web/static/partials/edit-user.html
+++ b/src/implementation/web/static/partials/edit-user.html
@@ -20,6 +20,14 @@
 	  <span ng-show="myForm.email.$error.pattern">Enter valid email-id</span>
 	</span>
       </p>
+      <p>Role:<br>
+	<input type="number" name="role" ng-pattern="/^(1|2)$/" class="form-control"  ng-model="role" required>
+	<span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
+	  <span ng-show="myForm.role.$error.required">Role is required.</span>
+	  <span ng-show="myForm.role.$error.pattern">Enter valid role-id</span>
+	</span>
+      </p>
+      <p> {{ myText }} </p>
       <p>
 	<input type="submit" value="Save" class="btn btn-primary"  ng-disabled="myForm.$invalid">
 	<a href="#/">Cancel</a>
