--- a/src/implementation/web/static/partials/view-user.html
+++ b/src/implementation/web/static/partials/view-user.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-4"></div>
-  <div class="col-md-5"><h2>Details of <b>{{ name }}</b></h2></div>
+  <div class="col-md-5"><h2>Details of <b>{{ users.name }}</b></h2></div>
   <div class="col-md-3">
     <a onclick="history.back();" role="button" class="btn btn-success btn-large">Back</a>
   </div>
@@ -27,10 +27,10 @@
       </table>
       <div class="col-md-12">
 	<div class="col-md-4"></div>
-	<span ng-if="role_name == 'admin' ||  user_id == id">
-          <a href="#/edit-user/{{id}}" class="btn btn-primary">Edit</a>
-	  <span ng-if="role_name == 'admin' &&  user_id != id">
-	    <a class="btn btn-primary" ng-click="delete_user(id)">Delete</a>
+	<span ng-if="role_name == 'admin' ||  user_id == users.id">
+          <a href="#/edit-user/{{users.id}}" class="btn btn-primary">Edit</a>
+	  <span ng-if="role_name == 'admin' &&  user_id != users.id">
+	    <a class="btn btn-primary" ng-click="delete_user(users.id)">Delete</a>
 	  </span>
 	</span>
 
